--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -31,3 +31,21 @@
 
 
 ## @Transactional 의 propagation 속성에 대해서 설명해 보시오.
+
+트랜잭션의 동작방식을 제어할 수 있는 여러 속성들이 있는데 그 중에 하나가 `propagation` 이다. `Transaction propagation` 이란 독자적인 트랜잭션 경계를 가진 코드에 대해 이미 진행 중인 트랜잭션이 있을 때 어떻게 동작할 것인가를 결정하는 방식이다.
+
+* 트랜잭션 경계: 트랜잭션 시작 ~ `commit()` / `rollback()` 까지의 구간
+
+<옵션 종류>
+
+1. `PROPAGATION_REQUIRED`
+
+   : 진행 중인 트랜잭션이 없으면 새로 시작하고, 이미 시작된 트랜잭션이 있으면 이에 참여한다. 기본 트랜잭션 전파 속성. 진행 중인 트랜잭션에 참여하는 경우, 트랜잭션 경계의 끝에서 트랜잭션을 커밋시키지 않고, 최초 트랜잭션이 정상적으로 진행되야 커밋될 수 있다.
+
+2. `PROPAGATION_REQUIRES_NEW`
+
+   : 항상 새로운 트랜잭션을 시작한다. 진행 중인 트랜잭션이 있든 없든 상관없이 새로운 트랜잭션을 만들어서 독자적으로 동작한다. 독립적인 트랜잭션이 보장돼야 하는 코드에 적용한다.
+
+3. `PROPAGAtiON_NOT_SUPPORTED`
+
+   : 트랜잭션 없이 동작한다. 진행 중인 트랜잭션이 있어도 이를 무시한다. 트랜잭션에 참여하는 메소드가 많은 상황에서 특정 메소드만 트랜잭션 적용에서 제외할 때 유용하다.
