210119 CodingTest_Top50 & Interview | 45, Update Question

--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -1,5 +1,43 @@
 # 02. Spring
 
+## Spring과 Django의 차이점?
+
+- Django Autentication이란?
+- Django messages 프레임워크란?
+
+
+
+## Spring과 Spring Boot의 차이점?
+
+- Spring의 장점
+
+
+
+## IoC와 DI의 차이점?
+
+
+
+
+
+## 다이나믹 프록시란?
+
+- aspect J
+- 위빙
+
+
+
+## filter와 interceptor의 차이점?
+
+
+
+
+
+## 스프링 프로젝트에서 메모리 누수가 일어나는 경우는 어떤 경우인가?
+
+
+
+
+
 ## 왜 (단위)테스트를 작성해야 하는가?
 
 테스트는 내가 예상하고 의도했던 대로 코드가 정확히 동작하는지를 확인해서, 작성한 코드를 확신할 수 있게 해준다. 코드나 적용한 기술이 변경되더라도 변경하기 이전과 동일한 기능을 잘 수행한다는 것을 보장해준다. 또한 새로운 기능을 추가함으로써 기존 기능들이 영향을 받지 않고 잘 동작하는지도 확인할 수 있다.
