--- a/Interview/03. MySQL.md
+++ b/Interview/03. MySQL.md
@@ -2,9 +2,9 @@
 
 (볼드체로 표시한 부분도 답변 준비할 것)
 
-## 인덱스를 사용했을 때 어떤 점이 좋은가?
+## 인덱스가 무엇인가?
 
-
+### 인덱스를 사용했을 때 어떤 점이 좋은가?
 
 
 
@@ -56,3 +56,8 @@
 
 ### 왜 격리 수준이 높아질 수록 동시성이 떨어지는가?
 
+
+
+## MySQL 성능이 나빠지면 어떻게 해야하는가?
+
+: 여러 가지 중 하나는 슬로우 쿼리 로그를 본다. 모니터링을 통해 느린 쿼리가 나타나면 알림이 오도록 하게 한다.
