--- a/Interview/01. Java.md
+++ b/Interview/01. Java.md
@@ -1,3 +1,34 @@
 # 01. Java
 
-## 
+## Java와 Python의 차이점?
+
+
+
+
+
+## Java 7 / 8에서는 무엇이 달라졌는가?
+
+- `Spring5 Webflux` <- 이게 네티를 사용함
+
+
+
+## 인터페이스와 추상클래스의 차이점?
+
+
+
+
+
+## static inner 클래스 / inner 클래스 언제 쓰이는가?
+
+- inner 클래스 중에서도 private/public 은 언제 쓰이나
+
+
+
+## hashcode()메소드를 왜 구현하는가?
+
+
+
+
+
+## stringBuilder와 stringBuffer의 차이점?
+
