--- a/Interview/05. Data Structure.md
+++ b/Interview/05. Data Structure.md
@@ -1,2 +1,9 @@
 # 05. Data Structure
 
+## ~~ 자료구조에 대해서 설명해보시오.
+
+- map / LinkedHashMap / concurrentHashMap
+- list / arrayList
+  - arrayList는 어떻게 계속 크기에 상관없이 늘어나는가?
+- set
+
