210124 God Of Java | 자바의 신 복습

--- a/Interview/08. Thread & IO.md
+++ b/Interview/08. Thread & IO.md
@@ -36,6 +36,12 @@
 
 
 
+## 멀티스레드 환경에서 동시성을 제어할 수 있는 방법?
+
+https://deveric.tistory.com/104
+
+
+
 ## 멀티스레드 환경에서 동기화를 위해 사용할 수있는 예약어가 무엇인가?
 
 - synchronized
