--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -19,6 +19,12 @@
 
 
 
+## 로드밸런서?
+
+https://deveric.tistory.com/91
+
+
+
 ## HTTP vs HTTPS?
 
 https://jeong-pro.tistory.com/89?category=793347
@@ -50,5 +56,7 @@ https://jeong-pro.tistory.com/84?category=793347
 
 
 ## google.com을 주소창에 치고 화면에 구글 화면에 나올 때까지 어떤 일이 일어나는지 자세히 말해보시오.
+
+https://deveric.tistory.com/97
 
 : 3 way handshaking / 방화벽 / 로드밸런싱 / tomcat / 서버 쪽으로 넘어가서 요청을 어떻게 처리하는 것까지 자세하게 http/handshaking/방화벽/네트워크/쿼리파싱 답변에 추가
