210125 Programmers & Real MySQL & Interview | 신규 아이디 추천, Real MySQL 3.1, Update Answer

--- a/Interview/03. Database.md
+++ b/Interview/03. Database.md
@@ -58,6 +58,8 @@ https://jeong-pro.tistory.com/114?category=793347
 
 ### 왜 격리 수준이 높아질 수록 동시성이 떨어지는가?
 
+데이터의 정합성을 보장하기 위해 락으로 동시성을 제어하기 때문이다. 락을 사용하면 여러 커넥션에서 동시에 동일한 자원을 요청할 경우 순서대로 한 시점에는 하나의 커넥션만 변경할 수 있다.
+
 
 
 ## Exclusive Lock vs Shared Lock?
