--- a/Interview/08. Thread & IO.md
+++ b/Interview/08. Thread & IO.md
@@ -111,12 +111,28 @@ https://www.baeldung.com/spring-mvc-async-vs-webflux
 
 → 적은 스레드와 메모리를 효율적으로 사용할 수 있는 것이기 때문에 "속도가 빠르다" 보다는 "적은 리소스로 많은 트래픽을 감당한다" 고 할 수 있다. / Webflux는 꼭 성능 때문만이 아니라 함수형 스타일 코드를 이용해 간결하고 읽기 좋고 조합하기 편한 코드를 작성할 수 있다. 데이터 흐름에 다양한 오퍼레이터를 적용시킬 수 있고, 연산을 조합해서 만든 동시성 정보가 노출되지 않는 추상화된 코드를 작성할 수 있다. 데이터의 흐름의 속도를 제어할 수 있는 메커니즘도 제공한다.
 
+### 리액티브?
+
+https://engineering.linecorp.com/ko/blog/reactive-streams-with-armeria-1/
+
+"반응형"이라는 용어는 I / O 이벤트에 반응하는 네트워크 구성 요소, 마우스 이벤트에 반응하는 UI 컨트롤러, 사용 가능한 리소스 등 변경, 가용성 및 처리 가능성에 대한 반응을 중심으로 구축된 프로그래밍 모델이다. 그런 의미에서 Non-blocking은 반응적이라고 할 수 있다. 왜냐하면 블락되지 않고 작업이 완료되거나 데이터가 사용 가능해지면 알림에 대응하는 모드에 있기 때문이다.
+
+또한 Spring 팀에서 리액티브와 연관시키는 또 Non-blocking pressure라는 중요한 매커니즘이 있다. 동기식 명령형 코드에서 Blocking 호출은 호출자가 대기하도록하는 자연스러운 형태의 역압 역할을 한다. 비동기식 코드에서는 빠른 생산자가 목적지를 압도하지 않도록 이벤트 속도를 제어하는 것이 필수적이다.
+
 
 
 ## Webflux와 Netty, RDBMS를 같이 사용하면 무엇이 안 좋은가?
 
 Webflux와 Netty는 비동기, Non-blocking IO 구조이고, RDBMS는 동기, Blocking IO 구조이다. 앞에서 비동기 방식으로 효율적으로 작업을 처리해도 작업 중에 데이터 액세스 작업이 있다면 이에 대한 처리를 위해 스레드가 블락된다. 그런데 동기 방식과 달리 비동기 방식은 스레드의 수가 적기 때문에 하나라도 멈추게 되면 성능이 안 좋아진다.
 
+### R2DBC?
+
+R2DBC는 SQL 데이터베이스를 위한 리액티브 API다.
+
+R2DBC가 만들어진 이유 중 하나는 적은 수의 스레드로 동시성을 처리하고 더 적은 하드웨어 리소스로 확장 할 수있는 Non-blocking 애플리케이션 스택이 필요했기 때문이다. JDBC는 Blocking API이므로 표준화 된 관계형 데이터베이스 액세스 API (즉, JDBC)를 사용한다면 Webflux를 사용한다 해도 비동기 시스템의 이점을 누릴 수가 없다. `ThreadPool`로 Blocking 작업을 보완하려는데에도 한계가 있다.
+
+또 다른 이유는 대부분의 응용 프로그램이 관계형 데이터베이스를 사용하여 데이터를 저장하기 때문이다. 여러 NoSQL 데이터베이스들은 Reactive 데이터베이스 클라이언트를 제공하지만 대부분의 프로젝트에서 NoSQL이 하나의 선택 사항이지 기본 스택이 아니다. 이것이 Non-blocking 데이터베이스 드라이버를 위한 새로운 공통 API를 만들게 된 계기다.
 
 
-## 트래픽이 많아질 때 왜 비동기 방식이 동기 방식보다 좋은가?
+
+## 왜 트래픽이 많아질 때 비동기 방식이 동기 방식보다 좋은가?
