--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -72,7 +72,7 @@ wrapper 클래스의 사용으로 오토박싱된 메모리가 해제 되지 않
 
 테스트 대상의 단위가 너무 크지 않아야 한다. 작을수록 테스트 코드를 이해하기 쉽고 작성하기도 쉽다. 논리적인 오류가 발생하여 결과가 바르게 나오지 않으면 원인을 찾기가 어려워진다. 작은 단위로 테스트를 진행하면 나중에 코드가 많아져도 작은 단위 테스트로 검증한 부분은 제외하고 접근할 수 있다.
 
-코드가 바뀌지 않는다면 매번 실행할 때마다 동일한 테스트 결과를 얻을 수 있어야 한다. 외부 환경에 영향을 받지 않아야 하며, 테스트 실행 순서를 바꿔도 동일한 결과가 보장되어야 한다.
+코드가 바뀌지 않는다면 매번 실행할 때마다 동일한 테스트 결과를 얻을 수 있어야 한다. 외부 환경에 영향을 받지 않아야 하며, 테스트 실행 순서를 바꿔도 동일한 결과가 보장되어야 한다. 따라서, 테스트가 적절히 격리되어야 한다.
 
 성공하는 테스트 뿐 아니라 네거티브 테스트도 만들어야 한다. 
 
