--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -47,6 +47,17 @@ https://jeong-pro.tistory.com/89?category=793347
 
 https://jeong-pro.tistory.com/168?category=793347
 
+REST란 자원의 표현(HTTP URI)을 가지고 상태를 전달(HTTP Method)하는 것이다. RESTful이란 REST 아키텍처 스타일의 제약조건을 모두 만족하는 시스템이다.
+
+<REST 아키텍처의 제약조건>
+
+1. Client - Server
+2. Stateless
+3. Cache
+4. Uniform Interface
+5. Layered System
+6. Code-On-Demand(Option)
+
 
 
 ## 웹 서버 vs WAS?
