--- a/Interview/03. Database.md
+++ b/Interview/03. Database.md
@@ -62,9 +62,108 @@ https://jeong-pro.tistory.com/114?category=793347
 
 
 
+## 락(Lock)?
+
+데이터베이스의 일관성과 무결성을 유지하기 위해 트랜잭션의 순차적 진행을 보장할 수 있는 직렬화 장치이다. Lock이 필요한 이유는 동시에 같은 데이터에 접근하여 수정하려 할 때 데이터베이스의 일관성이 깨질 수 있기 때문이다. 따라서, 이와 같은 문제를 방지하기 위해 Lock을 걸고 관리하는 것을 **Locking**이라고 한다.
+
+
+
+## Optimistic Lock vs Pessimistic Lock
+
+* Optimistic Lock: 기본적으로 데이터 갱신시 충돌이 발생하지 않을 것이라고 낙관적으로 보고, 우선적으로 락을 걸지 						  않는다.
+
+  * 버전을 통해 관리
+
+  * ex) 테이블 T에 대하여 커넥션 A와 B가 작업을 하기 위해 데이터를 가져온다. (테이블 T 버전 = 1)
+
+     → A에서 T에 대해 수정 작업을 한다. (테이블 T 버전 = 2)
+
+     → B도 T에 대해 수정 작업을 하려하지만 처음 가져온 버전과 현재 버전이 다르므로 충돌 발생
+
+  * 데드락의 가능성이 적으며 성능의 이점
+
+  * 충돌이 발생하면 해당 트랜잭션 버전의 이전 버전 모두가 롤백되기 때문에 오버헤드가 발생
+
+* Pessimistic Lock: 기본적으로 데이터 갱신시 충돌이 발생할 것이라고 비관적으로 보고, (조회할 때 부터) 우선적으로 						    락을 건다.
+
+  * 데이터를 가져올 때 DB 자체에 락을 건다.
+
+  * ex) 테이블 T에 대하여 커넥션 A가 작업을 하기 위해 데이터를 가져온다. (테이블 T에 락이 걸림)
+
+     → 커넥션 B가 테이블 B를 조회하려고 하면 예외 발생
+
+  * 충돌에 대한 오버헤드가 줄어들며, 무결성을 지키는데 용이
+
+  * 데이터에 락을 잡고 있는 것 자체가 비용이기 때문에 충돌이 없으면 오버헤드가 발생
+
+* 언제 사용해야 하는가?
+
+  * 충돌이 자주 발생하는 상황인가?
+  * 읽기와 수정하기의 비율이 어느 정도인가?
+  * 보통 웹 어플리케이션은 Optimistic Lock을 자주 사용
+
+
+
 ## Exclusive Lock vs Shared Lock?
 
 https://jeong-pro.tistory.com/94?category=793347
+
+* Exclusive Lock: 다른 사용자가 읽기, 수정, 삭제 모두를 불가능하게 함
+* Shared Lock: 다른 사용자가 동시에 읽을 수는 있지만, Update Delete를 방지함
+
+
+
+## 교착 상태(Deadlock)?
+
+프로세스나 스레드가 결코 일어날 수 없는 특정 이벤트를 기다리는 상태
+
+ex) 공유 자원 R1과 R2가 있고, 커넥션 A와 B가 각각 맡은 작업을 수행하기 위해 R1과 R2를 점유하고 있는 상태이다. A와 B는 작업을 마치려면 R1과 R2가 모두 필요하기 때문에 각자 가지고 있는 자원을 점유한 상태에서 서로 다른 커넥션이 가지고 있는 자원을 대기하는 상태
+
+<필요 조건>
+
+1.  상호 배제 조건: 여러 프로세스가 동시에 한 자원에 접근하지 못함
+
+   ​					  → 한 번에 한 프로세스만 해당 자원을 가질 수 있음
+
+2. 점유와 대기 조건: 한 프로세스가 자원을 점유한 상태로 다른 자원을 점유하기 위해 대기
+
+3. 비선점 조건: 프로세스에서 자원을 할당받으면 작업을 완료할 때까지 시스템에서 프로세스의 자원을 뺏을 수 없음
+
+4. 순환 대기 조건: 점유와 대기를 하는 상태로 순환 사이클에 갇혀 빠져나올 수 없는 상태
+
+<해결법>
+
+1. 교착 상태 무시: 교착 상태가 드물게 발생하는 시스템(ex. OS)에서 사용하는 방법
+
+   → 교착 상태가 드물게 발생하므로 교착 상태 해결에 대한 비용을 지불하는 것이 효율적이지 못하다고 생각해서 교착 상태가 일어나지 않는다고 가정하고 이를 무시.
+
+   → 만약 교착 상태가 발생하면 사용자가 프로세스를 죽이거나 시스템을 재부팅하는 방법으로 해결
+
+2. 교착 상태 탐지 및 복구: 교착 상태가 자주 발생하는 시스템에서 사용하는 방법
+
+   * 탐지: 순환 대기 존재 여부에 초점을 맞춰 탐지 알고리즘을 호출
+
+   * 복수: 탐지에서 찾아낸 순환 대기를 깨서 교착 상태로부터 회복
+
+     * 순환 대기가 깨질 때까지 프로세스 종료 / 순환 대기에 포함된 제어권을 뺏어 롤백
+
+       → 시스템마다 우선 순위에 따라 종료할 프로세스를 선정(MySQL은 트랙잭션 크기(작업 대상 레코드 수)가 가장 작은 순)
+
+3. 교착 상태 예방: 교착 상태의 필요 조건이 발생하지 않도록 하여 교착 상태를 예방하는 방법
+
+   → 교착 상태가 자주 발생하는 시스템에서 예방을 사용하지 않는 이유?
+
+   → 교착 상태의 조건 중 하나를 거부하여 교착 상태가 발생하지 않는 환경을 만들어버리면 자원을 효율적으로 사용할 수 없기 때문
+
+   → ex) 점유와 대기 조건을 거부한다면, 프로세스가 작업을 수행하기 전에 필요한 모든 자원을 요청하고 획득해야함
+
+4. 교착 상태 회피: 교착 상태를 인정하고 피해가는 방법
+
+   → 회피 알고리즘(ex. 은행원 알고리즘): 시스템을 안전 상태와 불안전 상태로 나누어 불안전 상태일 때는 대기시킴
+
+   → 교착 상태가 자주 발생하는 시스템에서 회피를 사용하지 않는 이유?
+
+   → 탐지와 복구는 교착 상태가 발생한 것 같을 때 탐지하고 복구하지만, 회피는 자원을 요청할 때마다 시스템의 상태를 판단하고 회피하므로 비효율적
 
 
 
