--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -39,6 +39,24 @@ https://jeong-pro.tistory.com/89?category=793347
 
 
 
+## 웹 소캣?
+
+두 프로그램 간의 메시지를 교환하기 위한 통신 방법 중 하나
+
+<특징>
+
+1. 양방향 통신: 데이터 송수신을 동시에 처리하기 위한 통신 방법
+   * 클라이언트와 서버가 서로가 서로에게 원할 때 데이터를 주고 받을 수 있다.
+2. 실시간 네트워킹: 웹 환경에서 연속된 데이터를 빠르게 노출
+   * ex) 채팅, 주식, 비디오 데이터
+   * 여러 단말기에서 빠르게 데이터를 교환
+
+<장점>
+
+<한계>
+
+
+
 ## 소켓 통신(TCP vs UDP)?
 
 
