--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -21,14 +21,79 @@ https://jeong-pro.tistory.com/96?category=793347
 
 ## IoC vs DI?
 
+IoC는 객체의 생성부터 소멸의 객체의 생명주기와 객체 간의 관계를 컨테이너 혹은 프레임워크가 개발자 대신 관리해주는 것
 
+DI는 구체적인 의존 오브젝트와 클라이언트 오브젝트를 런타임 시에 연결해주는 것. 클라이언트 오브젝트 코드는 인터페이스에만 의존하고 있어야 하며 해당 인터페이스를 어떤 클래스로 구현할 것인가는 외부 즉, 제 3자가 정해주는 것. 그래서 DI를 사용하면 클라이언트 오브젝트의 코드 변경 없이 의존 오브젝트의 구현 방식을 쉽게 바꿀 수 있는 것이다.
+
+### 외부에서 주입받으면 좋은 점?
+
+1. 내부에서 생성하게 되면 의존 오브젝트의 인터페이스를 이용하여 클라이언트 코드를 작성해도 결국 개발자가 직접 의존 오브젝트의 클래스를 선택하기 때문에 결합점이 클라이언트 오브젝트 코드에 조금 남게 된다.
+2. 싱글톤인지 다른 스코프로 생성할 건지에 대한 고민을 할 필요가 없다.
+
+
+
+## AOP?
+
+횡단 관심에 따라 프로그래밍하는 것
+
+<필요한 이유>
+
+1. 시간 측정, 권한 체크, 트랜잭션을 거는 등의 인프라 로직은 부가 기능이기 때문에 어플리케이션의 전 영역에 나타날 수 있음
+2.  중복 코드를 만들어 낼 가능성이 높아 유지보수가 힘들어짐
+3. 비즈니스 로직과 함께 있으면 비즈니스 로직을 이해하기 어려워짐
+
+<용어>
+
+* Target: 어떤 대상에 부가 기능을 부여할 것인가
+* Advice: 어떤 부가 기능을 부여할 것인가 → Before, AfterReturning, After Throwing, After, Around
+* Join point: 어디에 적용할 것인가 → 메서드, 필드, 객체, 생성자 등
+  * Spring AOP는 메서드 레벨만 지원
+* Pointcut: 실제 advice가 적용될 지점. Spring AOP에서는 advice가 적용될 메서드를 선정
+
+<주의 사항>
+
+* 자기가 자신의 메서드를 호출할 때는 AOP가 적용되지 않음
+
+  → 타깃 오브젝트에서 실행한 메서드 내부에 있는 메서드기 때문에 AOP가 적용되지 않은 타깃 오브젝트의 메서드를 그대로 실행하게 됨
 
 
 
 ## 다이나믹 프록시?
 
+먼저 클라이언트가 프록시 요청을 위해 프록시 팩토리에게 타깃 오브젝트의 인터페이스 정보를 넘겨준다. 그럼 프록시 팩토리를 해당 인터페이스를 구현한 다이내믹 프록시를 자동으로 생성한다. 부가기능은 리플렉션 API의 invoke() 메소드를 활용하여 부가기능을 InvocationHandler를 구현한 오브젝트에 담는다. 다이내믹 프록시는 클라이언트로 받는 모든 요청을 InvocationHandler에게 전달하고 InvocationHandler는 타깃 오브젝트의 메소드를 호출하여 핵심 기능 동작을 위임한다. invoke() 메소드 덕분에 부가기능 코드가 중복되는 걸 막아주고, 타깃의 종류와 상관없이 재사용이 가능하다.
+
 - aspect J
-- 위빙
+
+### 위빙
+
+: Aspect 클래스에 정의한 Advice 로직을 타깃(Target)에 적용하는 것
+
+1. 컴파일(CTW)
+
+* A.java ----(AOP)---> A.class ([AspectJ](https://www.eclipse.org/aspectj/))
+* A를 컴파일할 때, 중간에 공통된 코드를 끼어넣어 컴파일된 코드에는 해당 코드가 생김
+* 로드 타임, 런타임에 별다른 성능 부하가 없음
+* 별도의 컴파일 과정을 거쳐야 함
+
+2. 바이트코드 조작(LTW)
+
+* A.java -> A.class ---(AOP)---> 메모리 (AspectJ)
+
+* 컴파일된 클래스를 JVM에 로딩하는 시점에 바이트 코드 조작을 통해 공통된 코드를 끼어넣어 메모리에 올라온
+
+  클래스에는 해당 코드가 생김
+
+* 클래스 로딩할 때 약간의 부하가 생길 수 있음
+
+* 로드 타임 위버 설정이 들어가야 함
+
+3. 런타임(RTW)
+
+* Spring AOP에서 사용하는 위빙 방식
+* 부가 기능을 제공하는 Proxy를 생성하여 실제 타깃(Target) 오브젝트의 변형없이 위빙을 수행 → 프록시 패턴
+* 실제 런타임 상, Method 호출 시에 위빙이 이루어 짐
+* 소스파일, 클래스 파일에 대한 변형이 없다는 장점
+* 포인트 컷에 대한 어드바이스 적용 갯수가 늘어 날수록 성능이 떨어지고, 메소드 호출에 대해서만 어드바이스를 적용 할 수 있다.
 
 
 
