--- a/Interview/01. Java.md
+++ b/Interview/01. Java.md
@@ -189,4 +189,50 @@ https://deveric.tistory.com/64
 
 JVM의 Heap 영역에서 사용하지 않는 객체를 삭제하는 프로세스
 
-### GC의 실행 과정?
+<GC 수거 대상>
+
+GC Roots부터 참조하고 있는 객체를 차례로 탐색하여 수거 대상을 찾아낸다. 특정 시점에 유효한 참조를 가지고 있는 객체를 Reachable, 그렇지 않은 객체를 Unreachable하다고 한다. GC Roots가 될 수 있는 데이터로는 Stack 영역의 데이터, method 영역의 static 데이터, JNI에 의해 생성된 객체 등이 있다. 즉, 이러한 데이터들이 참조하고 있지 않으면 해당 객체는 수거 대상이 된다.
+
+<GC 동작 순서>
+
+### Mark and Sweep or Compact
+
+1. Mark: GC Roots부터 모든 변수를 스캔하면서 각각 어떤 객체를 참조하고 있는지 살펴보고 Unreachable 객체에 마
+2. -1. Sweep: Unreachable 객체들을 Heap에서 제거
+   * 단일 스레드가 Old 영역 전체를 훑음
+
+2. -2. Summary
+   * 멀티 스레드가 Old 영역을 분리해서 훑음
+3. Compact(알고리즘에 따라 다름): 메모리 단편화를 방지하기 위해 Sweep 후, 분산된 객체들을 Heap의 시작 주소로 모음
+
+<GC가 일어나는 시점>
+
+* Young 영역: 새로운 객체들이 할당되는 영역
+  * Eden: 새로운 객체들이 할당됨 → 공간이 없으면 Minor GC 발생
+  * Survivor[0] / [1]: Minor GC에서 살아남은 객체들이 이동 → 객체들의 age 값 증가 
+    * Survivor의 두 공간 중 하나는 무조건 비어있어야 함
+    * Minor GC가 일어날 때마다 사용하는 Survivor 공간이 바뀜
+* Old 영역: Young 영역에서 오랫동안 살아남은 객체들이 존재하는 영역
+  * 객체의 age가 age threshold에 도달하면 Old 영역으로 이동
+  * 공간이 없으면 Major GC 발생
+* Stop the World: GC를 실행하기 위해 JVM이 애플리케이션 실행을 멈추는 것
+  * GC를 실행하는 스레드 외의 모든 스레드가 멈춤
+
+<종류>
+
+1. Serial GC
+   * 싱글 스레드로 GC를 처리 → 다른 GC에 비해 Stop-the-World 시간이 긺
+   * Mark-Sweep-Compact 알고리즘 사용
+2. Parallel GC
+   * Java 8의 default GC
+   * Young 영역의 GC를 멀티스레드로 처리 → Serial GC에 비해 Stop-the-World 시간이 짧음
+3. Parallel Old GC
+   * Parallel GC를 개선
+   * Old 영역의 GC도 멀티스레드로 처리
+   * Mark-Summary-Compact 알고리즘 사용
+4. CMS GC
+   * Stop-the-World 시간을 줄이기 위해 고안됨 → Compact 과정이 없음
+5. G1 GC
+   * Java 9+의 default GC
+   * CMS GC를 개선 → Compact 진행
+   * Heap을 일정한 Region으로 나눔 → 전체 Heap이 아닌 Region 단위로 탐색
