--- a/Interview/03. Database.md
+++ b/Interview/03. Database.md
@@ -6,7 +6,19 @@
 
 https://jeong-pro.tistory.com/114?category=793347
 
-### 인덱스를 사용했을 때 어떤 점이 좋은가?
+<필요한 이유>
+
+<구조와 원리>
+
+인덱스는 보통 B-Tree 구조로 이루어져 있다. MySQL은 인덱스를 레코드 단위가 아니라 페이지 단위로 저장한다.
+
+<인덱스를 사용하는 것이 무조건 좋은가?>
+
+인덱스는 조회 작업(특히, 조건이 있는 조회 작업)에서는 효율적이지만 삽입, 변경, 삭제 작업에서는 성능이 떨어진다. 그 이유는 인덱스는 항상 정렬되어야 하기 때문이다. 따라서, 변경 작업이 일어날 때마다 인덱스 정렬 작업도 함께 일어나며, 변경 작업을 테이블과 인덱스 양쪽에서 수행해야 한다. **INSERT 작업 시**에는 해당 인덱스가 들어가야 하는 페이지의 공간이 없을 수도 있다. 그러면 리프 노드의 페이지 분리 작업이 일어나고 경우에 따라 분리 작업이 브랜치 노드까지 전파될 수 있기 때문에 성능이 느려진다. **DELETE 작업 시**에는 인덱스가 바로 삭제되는게 아니라 해당 인덱스에 '사용 안 함' 표시를 하기 때문에 공간 낭비가 발생한다. **UPDATE 작업 시**에는 인덱스 값을 변경하는 것이 아닌, 해당 인덱스를 삭제하고 새로 만들어주기 때문에 부하가 발생한다.
+
+<인덱스 컬럼 설정 기준>
+
+Cardinality(기수성)가 높은 컬럼 → 해당 컬럼이 각각의 레코드를 얼마나 잘 식별할 수 있는가
 
 
 
@@ -15,6 +27,28 @@ https://jeong-pro.tistory.com/114?category=793347
 외래키는 데이터의 (참조) 무결성을 보장해준다. 예를 들어, A 테이블의 code 컬럼은 B 테이블에 있는 값만 사용해야 하는 상황이라고 가정하자. 그런데 다양한 이유로 B 테이블에는 없는 값이 A 테이블의 code 컬럼에 있을 수 있다. 이렇게 참조 무결성이 깨지는 문제를 외래키를 생성하여 DBMS 차원에서 막아준다.
 
 그러나 외래키는 부모 테이블과 자식 테이블 모두 해당 칼럼에 인덱스 생성이 필요하고, 변경 시에는 반드시 부모 테이블이나 자식 테이블에 데이터가 있는지 체크하는 작업이 필요하여 잠금이 여러 테이블로 전파되고 그로 인해 **데드락**이 발생할 때가 많다. 또한 상당한 디스크 IO를 유발한다.
+
+
+
+## 트랜잭션?
+
+여러 작업을 논리적으로 하나의 단위로 묶어주는 것. 하나의 트랜잭션은 커밋(모든 작업이 성공하여 DB에 반영)되거나 롤백(작업 하나라도 실패하여 시작하기 전 상태로 되돌아감)된다.
+
+### 트랜잭션 성질(ACID)?
+
+* A(원자성): 트랜잭션은 모두 DB에 반영되거나, 전혀 반영되지 않아야 한다.
+
+  → 완료되지 않는 트랜잭션의 중간 상태를 DB에 반영시키지 않아야 한다.
+
+* C(일관성): 트랜잭션의 작업처리결과는 항상 일관되어야 한다.
+
+  → DB는 항상 일관된 상태를 유지해야 한다.
+
+* I(격리성): 둘 이상의 트랜잭션이 동시에 수행되고 있을 때, 어떤 트랜잭션도 다른 트랜잭션의 연산에 끼어들 수 없다.
+
+  → 각각의 트랜잭션은 독립적으로 이루어져야 한다.
+
+* D(지속성): 트랜잭션이 성공한다면 해당 결과는 DB에 영구적으로 반영되어야 한다.
 
 
 
