--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -168,3 +168,18 @@ https://deveric.tistory.com/86
 3. `PROPAGATION_NOT_SUPPORTED`
 
    : 트랜잭션 없이 동작한다. 진행 중인 트랜잭션이 있어도 이를 무시한다. 트랜잭션에 참여하는 메소드가 많은 상황에서 특정 메소드만 트랜잭션 적용에서 제외할 때 유용하다.
+
+
+
+## Maven?
+
+라이브러리를 관리해주는 도구
+
+* 라이브러리 관리 기능: pom.xml에 사용할 라이브러리 이름과 버전만 명시하면 해당 라이브러리를 자동으로 내려받고 관리해준다.
+* 빌드 기능: 애플리케이션을 빌드하는 표준화된 방법 제공
+
+
+
+## MyBatis vs JPA?
+
+마이바티스나 스프링 JdbcTemplate은 보통 SQL 매퍼라고 한다. SQL 매퍼는 객체와 SQL을 매핑하는 것으로 SQL과 매핑할 객체만 지정한다면 JDBC API 사용과 응답 결과를 객체로 매핑하는 일을 대신 처리해준다. 이런 점에서 어느 정도 불편한 점을 없애주지만 결국 개발자가 SQL을 직접 작성하므로 SQL에 의존하는 개발을 하게 되고 **패러다임 불일치 문제**가 발생한다. 반면 JPA는 SQL 작성도 ORM 프레임워크가 담당하기 때문에 위의 문제점이 없어진다.
