--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -19,12 +19,6 @@
 
 
 
-## 로드밸런서?
-
-https://deveric.tistory.com/91
-
-
-
 ## HTTP vs HTTPS?
 
 https://jeong-pro.tistory.com/89?category=793347
@@ -81,6 +75,95 @@ REST란 자원의 표현(HTTP URI)을 가지고 상태를 전달(HTTP Method)하
 ## 웹 서버 vs WAS?
 
 https://jeong-pro.tistory.com/84?category=793347
+
+![WAS](../images/WAS.png)
+
+* 웹 서버: 클라이언트로부터 HTTP 요청을 받아 HTML 문서나 각종 리소스를 전달하는 컴퓨터 ex) Apache, Nginx
+
+  * 클라이언트의 요청을 기다리고 요청에 대한 데이터를 만들어서 응답
+  * 응답 데이터는 정적인 데이터(html, css, 이미지 등)으로 한정
+
+* 웹 어플리케이션 서버(WAS): 웹 어플리케이션과 서버 환경을 만들어 동작시키는 기능을 제공하는 소프트웨어
+
+  ​											   프레임워크(= Web Server + Web Container) ex) Tomcat
+
+  * 웹 어플리케이션: 웹 브라우저에서 이용할 수 있는 응용 소프트웨어
+  * 정적인 페이지에서 처리할 수 없는 비즈니스 로직이나 DB 조회 같은 동적인 컨텐츠 제공
+
+### 그런데도 대규모 프로젝트에서는 웹 서버와 WAS를 따로 두는 이유?
+
+![MultipleWAS](../images/MultipleWAS.png)
+
+* 기능을 분리하여 서버 부하 방지
+
+  : WAS는 DB 조회 등 페이지를 만들기 위한 다양한 로직을 처리하는데 정적 컨텐츠까지 WAS에서 처리한다면 다른 작업에 사용할 리소스들로 인해 지연 발생 가능 (Tomcat 5.5 이상부터는 성능이 크게 떨어지지 않음)
+
+* 물리적으로 분리하여 보안 강화
+
+  * SSL에 대한 암복호화 처리에 웹 서버 사용
+  * 공격에 대해 웹 서버를 앞단에 두어 중요한 정보가 담긴 DB나 로직까지 전파되지 않도록 하기 위함
+
+* 여러 대의 WAS를 연결 가능
+
+  * Load Balancing
+  * 서버를 여러 대 사용하는 대용량 웹 어플리케이션의 경우 웹 서버와 WAS를 분리하여 무중단 운영을 위한 장애 극복에 쉽게 대응할 수 있음
+    * Fail Over: 하나의 WAS가 장애로 인해 작동이 중지되더라도 나머지 WAS들로 어플리케이션을 운영하는 것
+    * Fail Back: 작동이 중지된 WAS를 다시 재가동 시키는 것
+* 다른 종류의 WAS로 서비스 가능
+
+
+
+## 프록시 서버?
+
+클라이언트와 서버간의 중계 서버로, 통신을 대리 수행하는 서버
+
+* 캐시 / 보안 / 트래픽 분산 등 여러 장점을 가질 수 있음
+* 포워드 프록시, 리버스 프록시, 로드 밸런싱 등의 역할을 함
+
+### 포워드 프록시?
+
+: 클라이언트와 인터넷 사이에 위치하여 통신을 대리 수행하는 것
+
+* 캐싱: 클라이언트가 요청한 내용을 캐싱(클라이언트가 누구냐와 상관없이 같은 내용을 요청하면 돌려줌)
+  * 전송 시간 절약
+  * 불필요한 외부 전송 X
+  * 외부 요청 감소 → 네트워크 병목 현상 방지
+* 익명성: 클라이언트가 보낸 요청을 감춤
+  * 서버 입장에서는 클라이언트가 아니라 마치 포워드 프록시가 요청한 것처럼 보이므로 요청을 누가 보냈는지 알 수 없게 됨 (서버가 받은 요청 IP = Proxy IP)
+
+### 리버스 프록시?
+
+: 인터넷과 서버 사이에 위치하여 통신을 대리 수행하는 것
+
+* 캐싱: 클라이언트가 요청한 내용을 캐싱
+
+* 보안: 서버 정보를 클라이언트로부터 숨김
+
+  * 클라이언트 입장에서는 리버스 프록시가 실제 서버라고 생각하고 요청을 전달함
+
+    (실제 서버는 알지 못함 → 실제 서버의 IP가 노출되지 않음)
+
+  * 요청을 받은 리버스 프록시는 자신이 알고 있는 실제 서버에 요청을 전달
+
+* 로드 밸런싱
+
+
+
+## 로드밸런서?
+
+https://deveric.tistory.com/91
+
+여러 대의 서버가 분산 처리할 수 있도록 요청을 나누어 주는 서비스
+
+* OSI 7 계층을 기준으로 어떤 것을 나누는지에 따라 다름
+  * L2: Mac 주소를 바탕으로 로드 밸런싱
+  * L3: IP 주소를 바탕으로 로드 밸런싱
+  * L4: Transport Layer(IP & Port) 레벨에서 로드 밸런싱
+    * ex) https://www.youtube.com/로 접근 시, 서버 A와 서버 B로 로드 밸런싱
+  * L7: Application Layer(User Request) 레벨에서 로드 밸런싱
+    * ex) https://www.youtube.com/로 접근 시, /category 와 /search를 담당 서버들로 로드 밸런싱
+
+
 
 
 
