210201 ~ 210202 | Programmers & Interview & JPA
- Update Answer
- JPA 3장
- 비밀지도

--- a/Interview/03. Database.md
+++ b/Interview/03. Database.md
@@ -36,6 +36,8 @@ Cardinality(기수성)가 높은 컬럼 → 해당 컬럼이 각각의 레코드
 
 ### 트랜잭션 성질(ACID)?
 
+코드로 예시를 들 수 있어야 함
+
 * A(원자성): 트랜잭션은 모두 DB에 반영되거나, 전혀 반영되지 않아야 한다.
 
   → 완료되지 않는 트랜잭션의 중간 상태를 DB에 반영시키지 않아야 한다.
