--- a/Interview/10. Portfolio.md
+++ b/Interview/10. Portfolio.md
@@ -46,6 +46,8 @@ https://deveric.tistory.com/90
 
 ## 재사용성을 높일 수 있도록 개발했다고 하는데 그 예시?
 
+ex) 객체 간의 결합도를 낮춘다던지
+
 
 
 ## Gitflow를 왜 사용했나?
@@ -56,6 +58,8 @@ https://deveric.tistory.com/90
 - 소스 코드 관리에 대해서 공부해서 내용을 채우기
 
 : 효율적으로 소스 코드를 관리하고 싶어 branch 전략을 찾아봤습니다. 그 중에서 Gitflow 전략을 많은 기업들이 사용하고 있어서 나의 프로젝트에도 도입을 해봤습니다. 해당 전략을 통해 기능별로 브랜치를 나누고 작업할 수 있었고, 이에 따라 해당 기능에만 초점을 맞추어 코드의 정확성과 품질을 높이는데 집중할 수 있다는 점이 좋았습니다. 또한, 코드 리뷰를 할 때 다른 사람들에게 대상 코드를 명확하게 나타낼 수 있어 코드 리딩에 소요되는 시간을 줄일 수 있었습니다.
+
+### 혼자서 프로젝트를 진행하는데 브랜치를 나누는 이유?
 
 
 
