--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -9,7 +9,40 @@
 
 ## Spring vs Spring Boot?
 
-- Spring의 장점
+https://ssoco.tistory.com/66
+
+< Spring >
+
+: 엔터프라이즈 애플리케이션을 보다 쉽게 만들 수 있게 도와준다는 목표를 가지고 있음
+
+### 왜 스프링을 통해 기업용 애플리케이션을 보다 쉽게 만들 수 있는 것인가?
+
+스프링의 DI, IoC를 통해 재사용 및 유지보수가 용이한 코드를 작성할 수 있고, 확장성을 가진 코드를 설계할 수 있다. 또한 스프링이 제공해주는 기능들을 통해 개발자는 비즈니스 로직에만 집중할 수 있기 때문에 생산성을 증가시킬 수 있다.
+
+* 목표를 위한 해결책
+
+  1. Dependency Injection(DI) - 의존성 주입
+
+     : DI를 통해 객체간의 결합도를 낮춰 코드 재사용성을 높이고, 단위테스트를 용이하게 할 수 있도록 해준다.
+
+  2. 중복된 코드 제거
+
+     : 반복되는 코드를 제거함으로써 개발자가 비즈니스 로직에만 집중할 수 있도록 해준다.
+
+  3. 다른 프레임워크와의 통합
+
+     : JUnit, Mockito와 같은 다른 프레임워크(해당 기능에서의 최선의 방법으로 구현된 프레임워크나 모듈들)와 통합하여, 개발자가 비즈니스 로직외에 신경 써야 할 부분을 덜어준다 → 생산성 향상
+
+< Spring Boot >
+
+: 최소한의 설정으로 스프링 프레임워크와 서드파티 라이브러리를 사용 가능하게 해주고 이를 기반으로 응용 프로그램이나 서비스를 쉽게 만들 수 있도록 도와준다는 목표를 가지고 있음
+
+* 목표를 위한 해결책
+  1. Auto Configuration - 자동 설정
+  2. 쉬운 의존성 관리
+  3. 내장 서블릿 컨테이너(내장 서버)
+
+### Spring Boot를 사용하는 이유를 IoC와 연결지어서 말해보시오.
 
 
 
