210205 | Programmers & Interview & JSP 2.3
- 전화번호 목록
- 기능 개발
- 위장
- JSP 2.3 1장 ~ 9장

--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -46,6 +46,99 @@ https://ssoco.tistory.com/66
 
 
 
+## Servlet?
+
+### Servlet
+
+: 웹 어플리케이션을 만들 때 필요한 인터페이스
+
+* Spring Web MVC가 Servlet을 사용
+
+<Servlet이 생긴 이유>
+
+* 기존 웹 서버는 정적인 데이터만 처리가 가능했기 때문에 사용자(요청)에 따라 다른 처리를 해줄 수 없었음
+
+* 이를 개선하기 위해 CGI 등장
+
+  * CGI: 동적 데이터를 처리하는 웹 서버와 프로그램 사이의 인터페이스(규약)
+
+    * c, php, perl 등 다양한 언어로 구현할 수 있었기 때문에 구현체를 추상화하기 위해 등장
+
+  * 문제점1: 요청이 들어올 때마다 프로세스가 생성됨 → 프로세스를 스레드로 교체
+
+  * 문제점2: 같은 CGI 구현체를 사용하더라도 스레드 당 하나씩 CGI 구현체가 생성됨
+
+    ​			   → CGI 구현체를 싱글톤으로 관리(= Servlet)
+
+![Servlet](../images/Servlet.png)
+
+* Web Container
+  * Servlet을 관리하면 Servlet Container라고도 불림
+  * 요청이 들어오면 스레드를 생성하고, Servlet을 실행시킴
+  * Servlet 인터페이스에 따라 메소드를 호출하고 Servlet을 관리
+
+<Servlet 인터페이스>
+
+각 메소드는 Servlet 컨테이너(Tomcat)가 호출함
+
+* Init: Servlet 인스턴스 생성
+* Service: 실제 기능이 수행되는 곳
+  * HTTP 메소드에 따라 개발자가 구현한 doXXX 메소드를 호출
+* Destroy: Servlet 인스턴스 종료
+  * 보통 컨테이너가 종료되는 시점에 호출됨
+  * 특정 서블릿 로드 / 언로드 시에도 사용
+
+
+
+## DispatcherServlet?
+
+Spring Web MVC에서 사용하는 Servlet
+
+* 다음의 서블릿 단점을 보완
+
+  * 요청 url 하나 당 서블릿 하나를 만들어야 하고 서블릿이 만들어 질 때마다 web.xml에 여러 설정이 계속해서
+
+    추가로 붙게 됨
+
+  * 여러 서블릿에서 공통적으로 처리하고 싶은 부분에 대한 처리가 복잡함
+
+* Front Controller 역할
+
+  * 모든 요청을 받아서 각각의 요청을 처리할 핸들러들에게 분배(Dispatch)
+
+<동작 순서>
+
+1. 요청을 분석한다. (로케일, 테마, 멀티파트 등)
+
+2. (HandlerMapping에게 위임하여) 아래 방법 중 하나로 요청을 처리할 핸들러(컨트롤러)를 찾는다.
+
+   * BeanNameHandlerMapping: 빈 이름과 URL을 매핑하는 방식
+   * ControllerClassNameHandlerMapping
+   * SimpleUrlHandlerMapping
+   * DefaultAnnotationHandlerMapping: 어노테이션(@RequestMapping)으로 URL과 매핑하는 방식
+
+3. (등록되어 있는 HandlerAdapter 중에) 해당 핸들러를 실행할 수 있는 “HandlerAdapter”를 찾는다.
+
+4. 찾아낸 “HandlerAdapter”를 사용해서 핸들러의 응답을 처리한다.
+
+   * 핸들러의 리턴값을 보고 어떻게 처리할지 판단한다.
+
+     * 뷰 이름에 해당하는 뷰를 찾아서 모델 데이터(= ModelAndView)를 렌더링한다.
+
+       (핸들러에 @ResponseBody 애노테이션이 없이 문자열을 리턴할 때 리턴된 문자열을 뷰 이름으로 인식)
+
+       * 렌더링: 정해진 규칙에 따라 HTML 문서를 분석해서 알맞은 화면을 생성하는 것
+
+     * @ResponseEntity가 있다면 Converter를 사용해서 응답 본문을 만들고. → ModelAndView가 Null
+     
+       (핸들러가 @ResponseBody 애노테이션을 가진 채 문자열을 리턴하는 경우)
+
+5. (부가적으로) 예외가 발생했다면, 예외 처리 핸들러에 요청 처리를 위임한다.
+
+6. 최종적으로 응답을 보낸다.
+
+
+
 ## MVC 패턴?
 
 https://jeong-pro.tistory.com/96?category=793347
