--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -25,7 +25,19 @@ https://jeong-pro.tistory.com/89?category=793347
 
 
 
-## Get vs Post?
+## GET vs POST?
+
+### GET
+
+* 쿼리 문자열을 사용하여 URI와 함께 요청 파라미터가 전송됨
+  * 전송할 수 있는 파라미터 값의 길이에 제한이 있을 수 있음
+
+
+
+### POST
+
+* 데이터 영역을 이용해서 요청 파라미터를 전송
+  * 전송할 수 있는 파라미터의 길이에 제한이 없음
 
 
 
@@ -82,6 +94,7 @@ https://jeong-pro.tistory.com/84?category=793347
 
   * 클라이언트의 요청을 기다리고 요청에 대한 데이터를 만들어서 응답
   * 응답 데이터는 정적인 데이터(html, css, 이미지 등)으로 한정
+  * 사용자(요청)에 따라 다른 처리를 해줄 수 없음
 
 * 웹 어플리케이션 서버(WAS): 웹 어플리케이션과 서버 환경을 만들어 동작시키는 기능을 제공하는 소프트웨어
 
