--- a/Interview/00. 프로그래밍 일반 개념.md
+++ b/Interview/00. 프로그래밍 일반 개념.md
@@ -72,3 +72,64 @@ https://deveric.tistory.com/99
 
 
 ## 라이브러리 vs 프레임워크 vs API?
+
+
+
+## 로깅?
+
+운영체제나 소프트웨어가 실행 중에 발생하는 이벤트를 기록하는 행위
+
+<사용하는 이유>
+
+* 서비스 동작 상태 파악, 장애 파악 & 알람
+
+<방법>
+
+* Linux System API call - syslog()
+* 로깅 라이브러리 - slf4j
+
+### slf4j?
+
+로깅 추상화 라이브러리
+
+* API - SpringBoot에서는 slf4j
+  * 로깅 인터페이스
+* Binding - Spring Boot Starter에서는 logback
+
+  * 여러 Logger로 연결해주는 일을 함
+  * slf4j API를 구현한 클래스에서 Binding으로 연결된 로거의 API를 호출
+  * Binding은 한 개만 추가해야 함
+* Bridge
+  * 레거시를 위한 것
+  * 로거 호출을 slf4j의 인터페이스로 연결
+  * 해당 로거 호출을 대신 받아서 slf4j API를 호출함
+  * Bridge는 여러 개를 넣어도 상관없음
+  * Bridge와 Binder는 같은 종류를 쓰면 안됨
+
+<로깅 레벨>
+
+* FATAL: 매우 심각한 에러가 많은 경우, 이 레벨이 사용되면 프로그램이 종료되는 가능성이 높다.
+* ERROR: 에러가 발생했지만, 프로그램이 종료되지 않음
+  * 의도하지 않은 Exception이 발생하는 경우 사용
+* WARN: 에러가 될 수 있는 잠재적 가능성이 많은 경우, 알람이 오도록 설정하여 에러가 나기 전 조치를 취하거나, 에러가 나면 그 전의 상황을 알 수 있다.
+* INFO: 애플리케이션의 상태를 간결하게 보여주는 경우
+  * 명확한 의도를 가진 Exception이나 로그들
+* DEBUG: INFO 레벨보다 더 자세한 정보가 필요한 경우, 권한이 없어 디버깅이 불가능한 경우 유용
+* TRACE: DEBUG 레벨보다 더 자세한 정보가 필요한 경우, 개발환경에서 버그를 해결하기 위해 사용
+  * 최종 프로덕션이나 커밋에 포함되면 안된다.
+
+<로깅 메시지>
+
+* 독자를 고려하라
+
+  → 로그 파일이 어떤 레이어를 거칠지 모르기 때문에 인코딩 문제를 최소화하기 위해 영어를 사용
+
+* 로그 메시지에 컨텍스트를 담아라
+
+  → 에러가 났을 때 에러 메시지만으로 상황을 파악할 수 있도록 작성하고, 가능하면 해결방법도 작성
+
+<주의 사항>
+
+* 로그 파일 / DB 생명 주기 & 용량
+* 개인 정보
+* 시스템 주요 정보(시스템 보안, 계정 정보)
