--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -227,12 +227,6 @@ DI는 구체적인 의존 오브젝트와 클라이언트 오브젝트를 런타
 
 
 
-## JDBC?
-
-### Connection Pool?
-
-
-
 ## 스프링 프로젝트에서 메모리 누수가 일어나는 경우는 어떤 경우인가?
 
 wrapper 클래스의 사용으로 오토박싱된 메모리가 해제 되지 않는 현상
@@ -303,6 +297,54 @@ https://deveric.tistory.com/86
 
 * 라이브러리 관리 기능: pom.xml에 사용할 라이브러리 이름과 버전만 명시하면 해당 라이브러리를 자동으로 내려받고 관리해준다.
 * 빌드 기능: 애플리케이션을 빌드하는 표준화된 방법 제공
+
+
+
+## JDBC?
+
+: JAVA 진영의 DB 연결 표준 인터페이스
+
+* JDBC API를 JDBC DriverManager가 구현하며, JDBC DriverManager는 DB 종류에 따라 내부 로직이 다름
+* JDBC DriverManager → Connection 객체 → (Connection으로) Statement 획득 → (Statement로) ResultSet 획득
+
+<단점>
+
+* 쿼리 별로 중복되는 코드가 많음
+* 쿼리를 일일히 작성해야 함
+* Connection 관리를 계속해서 해야 함
+
+### Connection Pool?
+
+
+
+## SQL Mapper?
+
+: 객체와 SQL을 매핑하는 것
+
+* SQL과 매핑할 객체만 지정한다면 JDBC API 사용과 응답 결과를 객체로 매핑하는 일을 대신 처리
+
+< Spring JDBC >
+
+Spring JDBC(ex. JDBCTemplate)는 SQL Mapper 역할을 하며, 기존 JDBC를 한 단계 더 추상화시킴
+
+* DB와의 연결을 위한 설정 정보가 담긴 DataSource를 주입
+* 개발자는 실행할 쿼리, 파라미터 값 등을 넘겨주면 Spring JDBC가 위의 과정이나 모든 예외 처리, 트랜잭션 제어 등 많은 작업을 대신 처리해줌
+
+< MyBatis >
+
+* SQL을 자바에서 XML로 분리하려는 시도
+  * 복잡한 JDBC 코드가 제거됨
+  * ResultSet과 같이 결과값을 매핑하는 객체가 없음
+  * 간단한 설정
+  * 관심사의 분리
+
+<동작 순서>
+
+1. SqlSessionFactoryBuilder가 MyBatis 설정 파일을 읽어 SqlSessionFactory 생성
+2. SqlSessionFactory가 SqlSession을 생성
+3. 어플리케이션은 Mapper 인터페이스에 대한 매핑을 SqlSession에 요청
+4. SqlSession은 각 Mapper 인터페이스에 맞는 Mapper 인스턴스를 생성하여 매핑
+5. Mapper 인터페이스의 메소드가 호출되면 매핑된 SQL 구문 실행
 
 
 
