--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -43,6 +43,14 @@ https://jeong-pro.tistory.com/89?category=793347
 
 ## Session vs Cookie?
 
+* 쿠키는 웹 브라우저(클라이언트)에 값을 저장하는 반면, 세션은 서버에 저장한다.
+
+  → 쿠키는 네트워크를 통해 전달되기 때문에 HTTP 프로토콜을 사용하는 경우 중간에 누군가가 쿠키의 값을 읽어올 수 있다. 하지만, 세션은 서버에만 저장되기 때문에 상대적으로 쿠키보다는 세션이 보안성이 좋다.
+
+* 웹 브라우저가 쿠키를 지원하지 않거나 강제로 쿠키를 막으면 쿠키는 사용할 수 없지만, 세션은 쿠키 설정 여부에 상관없이 사용할 수 있다.
+
+* 쿠키는 도메인을 이용해서 쿠키를 여러 도메인 주소에 공유할 수 있지만, 세션은 여러 서버에서 공유할 수 없다.
+
 
 
 ## 웹 소캣?
