--- a/Interview/00. 프로그래밍 일반 개념.md
+++ b/Interview/00. 프로그래밍 일반 개념.md
@@ -73,6 +73,52 @@ https://deveric.tistory.com/99
 
 ## 라이브러리 vs 프레임워크 vs API?
 
+### API(Application Programming Interface)
+
+: 응용 프로그램에서 운영 체제나 프로그래밍 언어가 제공하는 기능을 제어할 수 있게 만든 인터페이스
+
+→ 소프트웨어를 조종하는 리모컨 같은 역할
+
+* 인터페이스: 하나의 시스템을 구성하는 2개의 구성 요소가 상호 작용하기 위해서는 경계가 필요하다. 이 경계에서 각 구성요소가 상호 접속하기 위한 하드웨어, 소프트웨어, 조건, 규칙 등을 포괄적으로 가리키는 것
+* 구현과 독립적으로 사양만 정의되어 있다.
+* API에 따라 접근 권한이 있을 수 있다.
+
+### 라이브러리
+
+: 응용 프로그램 개발을 위해 필요한 기능을 모아 놓은 소프트웨어
+
+* 모든 코드를 재사용할 수 없으므로 특정 기능에 대한 코드만이라도 재사용하기 위해 모아놓은 것
+* 독립성을 가진다. → 하나의 라이브러리는 다른 라이브러리에 의존하지 않음
+* **응용 프로그램이 능동적으로 라이브러리를 사용한다.** → 응용 프로그램이 필요할 때 라이브러리를 호출
+
+### 프레임워크
+
+: 응용 프로그램이나 소프트웨어의 솔루션 개발을 수월하게 하기 위해 제공된 소프트웨어 환경
+
+* 추상 클래스나 인터페이스를 정의하고 인스턴스 사이의 상호작용을 통해 시스템 전체 혹은 일부를 구현해 놓은 재사용 가능한 설계
+
+  * 코드를 재사용함으로써 설계 아이디어까지 재사용하는 것 → 비즈니스 로직에만 집중 가능
+  * 코드를 통해 재사용할 수 있었던 이유: 프레임워크가 어플리케이션을 제어하기 때문 → **제어의 역전(DI)**
+    * 객체의 생성, 관계 설정, 사용, 생명 주기 등 객체 간 상호작용을 프레임워크가 관장
+
+* 애플리케이션 개발자가 현재의 요구사항에 맞게 커스터마이징할 수 있는 어플리케이션의 골격
+
+* **응용 프로그램이 수동적으로 프레임워크에 의해 사용된다.**
+
+  ex) 스프링 프레임워크에서는 요청이 들어오면 DispatcherServlet이 요청을 처리할 HandlerAdapter를 선택하고 HandlerAdapter가 실행할 때 개발자가 구현한 컨트롤러 객체를 호출한다.
+
+#### 프레임워크와 라이브러리가 생긴 이유
+
+* 설계 재사용을 강조하는 디자인 패턴으로는 코드를 재사용할 수 없다.
+* 코드를 재사용할 수 있는 컴포넌트 조립 방식은 실패했다.
+  * 컴포넌트 조립 방식: 기존의 시스템이나 소프트웨어를 구성하는 컴포넌트를 조립해서 하나의 새로운 어플리케이								 션을 만드는 소프트웨어 개발 방법론. 컴포넌트를 기능별로 개발하여 각자 필요한 것을 골라 								 조립.
+  * why? 현실 세계에 있는 도메인 영역은 굉장히 다양하고, 이 도메인들은 자기만의 특수성을 가지고 있기 때문에 최적화된 로직이 필요하다. 하지만 모든 도메인을 포괄할 수 있는 컴포넌트를 만들 수 없다.
+
+#### API vs 라이브러리 vs 프레임워크
+
+* API와 라이브러리의 차이점은 구현 로직의 유무이다.
+* 라이브러리와 프레임워크의 차이점은 응용 프로그램의 흐름 주도권을 누가 가지고 있느냐이다.
+
 
 
 ## 로깅?
