--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -73,13 +73,12 @@ https://ssoco.tistory.com/66
 ![Servlet](../images/Servlet.png)
 
 * Web Container
-  * Servlet을 관리하면 Servlet Container라고도 불림
   * 요청이 들어오면 스레드를 생성하고, Servlet을 실행시킴
   * Servlet 인터페이스에 따라 메소드를 호출하고 Servlet을 관리
 
 <Servlet 인터페이스>
 
-각 메소드는 Servlet 컨테이너(Tomcat)가 호출함
+각 메소드는 웹 컨테이너(Tomcat)가 호출함
 
 * Init: Servlet 인스턴스 생성
 * Service: 실제 기능이 수행되는 곳
@@ -100,7 +99,7 @@ Spring Web MVC에서 사용하는 Servlet
 
     추가로 붙게 됨
 
-  * 여러 서블릿에서 공통적으로 처리하고 싶은 부분에 대한 처리가 복잡함
+  * 여러 서블릿에서 공통적으로 처리하고 싶은 부분에 대한 처리가 복잡함 ex) Filter, Listener 등
 
 * Front Controller 역할
 
@@ -119,7 +118,7 @@ Spring Web MVC에서 사용하는 Servlet
 
 3. (등록되어 있는 HandlerAdapter 중에) 해당 핸들러를 실행할 수 있는 “HandlerAdapter”를 찾는다.
 
-4. 찾아낸 “HandlerAdapter”를 사용해서 핸들러의 응답을 처리한다.
+4. 찾아낸 “HandlerAdapter”를 사용해서 핸들러를 실행시키고 이에 대한 응답을 처리한다.
 
    * 핸들러의 리턴값을 보고 어떻게 처리할지 판단한다.
 
