--- a/Interview/10. Portfolio.md
+++ b/Interview/10. Portfolio.md
@@ -28,6 +28,20 @@
 
 https://jeong-pro.tistory.com/168?category=793347
 
+### Maven
+
+#### 특징
+
+* 프로젝트에 필요한 모든 종속성을 리스트 형태로 Maven에게 알려줘서 종속성을 관리
+* XML, Repository를 가져올 수 있다.
+  * pom.xml에 필요한 Jar, Class Path를 선언하면 직접 다운로드 할 필요 없이 Repository에서 자동으로 필요한 라이브러리 파일을 볼러옴
+
+#### 단점
+
+* 라이브러리가 서로 종속할 경우 XML이 복잡해진다.
+* 계층적인 데이터를 표현하기엔 좋지만, 플로우나 조건부 상황을 표현하기는 어렵다.
+* 맞춤화된 로직 실행이 어렵다.
+
 
 
 ## MySQL을 선택한 이유?
