--- a/Interview/09. Etc.md
+++ b/Interview/09. Etc.md
@@ -1,8 +1,69 @@
 # 09. Etc
 
+## 빌드와 배포?
+
+### 빌드
+
+* 컴파일: 작성한 소스 코드를 바이너리 코드로 변환하는 과정
+
+* 링크: 여러 개로 분리한 소스 코드들을 컴파일한 결과물들에서 최종 실행 가능한 파일을 만들기 위해 필요한 부분을 
+
+  ​		 찾아서 연결해 주는 작업
+
+* 빌드: 소프트웨어를 실행 가능한 소프트웨어 산출물(ex. jar, war 등)로 만드는 과정
+
+#### 빌드 도구
+
+* 소스 코드를 컴파일, 테스트, 정적 분석 등을 실시하여 실행 가능한 애플리케이션으로 **자동 생성**하는 프로그램
+* 계속해서 늘어나는 라이브러리의 **자동 추가 및 관리**
+* 라이브러리 버전을 **자동으로 동기화**
+* ex) Ant, Maven, Gradle
+
+### 배포
+
+: 작성한 코드를 빌드하고, 빌드가 완성한 실행 가능한 파일을 사용자가 접근할 수 있는 환경에 배치하면 배포가 완료된 것
+
+* git에 올려두고, 코드가 제대로 동작하는지 테스트 코드를 작성하고, 이를 수행 및 검증하는 작업까지
+
+#### CI(Continuous Integration - 지속적 통합)
+
+: 개발자를 위한 자동화 프로세스인 지속적 통합으로 모든 개발이 끝난 이후에 코드 품질을 관리하는 고전적 방식의 단점을 해소하기 위해 나타난 개념
+
+1. 코드 통합
+2. 통합한 코드가 제대로 동작하는지 테스트
+3. 제대로 빌드가 되는지 테스트
+4. 결과를 정리하고 버그가 존재한다면 기록
+
+#### CD(Continuous Deploy - 지속적 배포)
+
+: 소프트웨어가 항상 신뢰 가능한 수준에서 배포될 수 있도록 관리하자는 개념
+
+### 무중단 배포
+
+기존에 동작하고 있는 (배포가 완료된) 서버가 있는 상태에서 새롭게 업데이트한 코드를 배포한다면 충돌이 발생한다. 따라서, 기존에 서비스 중인 서버를 잠시 내리고 코드를 배포한 후 다시 서버를 동작시켜야 한다. **하지만 서버가 다시 뜨는데 걸리는 시간만큼 다운 타임(유저에게 서비스 불가능한 시간)이 발생**한다.
+
+#### 필요 조건
+
+* 두 대 이상의 서버를 서비스해야 한다.
+* 다운 타임이 발생하지 않도록 실제 서비스 중인 서버와 새롭게 배포한 서버가 동시에 존재해야 한다.
+* 비용을 줄이려면 배포할 때만 새롭게 서버를 띄우고 배포가 완료된 후에 기존 서버는 내린다.
+
+#### 종류
+
+* Rolling 배포: 하나의 서버를 로드밸런서에서 빼고 신규 서비스를 배포 후, 다시 로드밸런서에 넣는 과정을 모든 서버마다 반복
+  * 배포할 서버가 여러 개라면 배포가 모두 끝나기 전까지는 누구는 기존 서비스를 제공받고 누구는 업데이트된 서비스를 제공받는다는 문제가 발생
+  * 1대에 배포하는 것보다 최소 2배 이상 느림
+* Canary 배포: 소수의 유저만 사용하는 환경(Canary 환경)에 신규 버전을 배포하고 문제가 없다고 판단됐을 때, 다른 모든 서버에 배포
+* Blue/Green 배포: 실제로 서비스 중인 환경(Blue)과 새롭게 배포할 환경(Green)을 세트로 준비해서 배포
+  * 새롭게 배포할 환경에만 배포하면 되기 때문에 배포 속도가 매우 빠름
+  * 언제나 Green 환경이 떠있기 때문에 만약 잘못된 버전으로 배포한다면 빠르게 롤백 가능
+  * 언제나 Green 환경이 떠있기 때문에 비용이 2배 이상
+
+
+
 ## Jenkins를 왜 사용하는가?
 
-
+Travis CI와의 비교
 
 
 
