--- a/Interview/07. Network.md
+++ b/Interview/07. Network.md
@@ -53,6 +53,42 @@ https://jeong-pro.tistory.com/89?category=793347
 
 
 
+## 캐시?
+
+데이터나 값을 미리 복사해 놓는 임시 저장소
+
+### 캐시를 사용하는 이유
+
+* 원본 데이터에 접근하는 데 오래 걸리는 경우
+* 값을 다시 계산하는 시간(비용)을 줄이고 싶은 경우
+
+### HTTP 캐시
+
+1. 서버가 응답 결과로 여러 리소스를 보내면 클라이언트(웹 브라우저)는 브라우저 캐시에 저장한다.
+2. 클라이언트는 서버로 요청을 보내기 전에 브라우저 캐시부터 확인한다.
+3. 캐시에 원하는 데이터가 있다면 해당 데이터를 사용한다.
+
+만약 서버에서 데이터가 변경이 되었다면 클라이언트도 서버에서 데이터를 가져와 캐시 데이터를 갱신해야 한다. 하지만 클라이언트는 캐시 데이터가 삭제되지 않는 이상 계속해서 캐시 데이터를 사용한다.
+
+→ 서버는 리소스를 응답할 때 `Cache-Control` 헤더의 `max-age` 에 해당 리소스의 만료 시간을 명시
+
+그러나 만료 시간이 지나더라도 캐시 업데이트가 필요하지 않을 수 있다. 이 경우 캐시의 만료 시간이 지날 때마다 똑같은 리소스를 서버에서 다운로드하는 불필요한 네트워크 비용이 발생할 수 있다.
+
+1. 서버에서 리소스를 응답할 때 `Etag` 헤더에 해시 값을 담아 보냄
+2. 클라이언트는 해당 리소스가 만료되면 `If-None-Match` 헤더에 1에서 받은 해시 값을 담아 보냄
+3. 만약 리소스가 변경되지 않았다면 해시 값이 같으므로 리소스를 새로 보내지 않고 `304 Not-Modified` 상태 코드와 함께 `Etag` 값을 보냄
+4. 클라이언트는 기존에 가지고 있던 캐시 데이터를 재사용하게 됨
+
+* Etag: 리소스의 컨텐츠에 해싱 알고리즘을 적용하여 얻은 데이터의 해시 값.
+
+브라우저에 캐싱된 리소스는 만료될 때까지 사용해야 한다는 한계가 있다.
+
+→ 리소스 URL을 변경하여 해결
+
+* 파일의 디지털 지문이나 버전 번호를 파일 이름에 포함하는 방식으로 수행
+
+
+
 ## 웹 소캣?
 
 두 프로그램 간의 메시지를 교환하기 위한 통신 방법 중 하나
@@ -185,6 +221,20 @@ https://deveric.tistory.com/91
     * ex) https://www.youtube.com/로 접근 시, /category 와 /search를 담당 서버들로 로드 밸런싱
 
 
+
+## NGINX?
+
+* **UpStream Module**: NGINX가 부하분산, 속도 개선과 같은 역할을 할 수 있게 해주는 내장 모듈
+  * 업스트림 모듈로 한 대의 웹서버에 여러 대의 애플리케이션 서버를 붙임
+  * 이후 클라이언트의 요청이 오면 여러 서버 중 요청을 처리 할 서버를 선정하여 요청을 전달하고, 서버의 응답도 클라이언트에게 전달 
+  * **UpStream**: 여러 대의 컴퓨터가 순차적으로 어떤 일을 처리 할 때 어떤 서비스를 받는 서버 = Origin 서버
+
+### restart vs reload
+
+* restart: 서버를 shutdown한 후 재기동 → 서버가 운영되지 않는 시간이 존재
+  * 설정 파일에 문법적 에러가 존재하는 경우, 서버가 죽음 
+* reload: 새로운 설정 파일을 적용해도 서버가 shutdown되지 않음
+  * 마스터 프로세스는 설정을 다시 로드하라는 신호를 받으면 새 설정 파일의 `syntax validity` 를 확인하고 제공된 설정한다. 성공하면 마스터 프로세스는 새 작업 프로세스를 시작하고 기존 작업 프로세스에 메시지를 보내 종료하도록 요청한다. 설정 파일에 문법적 에러가 발견되면 마스터 프로세스가 변경 사항을 롤백하고 이전 설정으로 계속 작업한다. 기존 작업 프로세스는 종료 명령을 받으면 새로운 요청은 더 이상 받지 않고 남은 요청이 모두 처리 될 때까지 계속 작업한다. 그 후 이전 작업자 프로세스가 종료된다.
 
 
 
