--- a/Interview/09. Etc.md
+++ b/Interview/09. Etc.md
@@ -61,6 +61,51 @@
 
 
 
+## Redis를 왜 사용하는가?
+
+### Redis
+
+: 딕셔너리 구조(Key - Value)를 가진 인메모리 데이터베이스
+
+데이터베이스보다 더 빠른 메모리(Main Memory-DRAM)에 더 자주 접근하고 덜 자주 바뀌는 데이터를 저장하자라는 취지에서 나온 것이 인메모리 데이터베이스
+
+<Redis 자료구조>
+
+* String: Key - Value 쌍 / Java의 Map Entry
+* List: Key - List 쌍 / Java의 LinkedList
+* Set: Key - Set 쌍 / Java의 HashSet
+* Sorted Set: Key - Set 쌍 / Java의 TreeSet / Score라는 숫자 값으로 순서가 정해짐
+* Hash: Key - Hash 쌍 / Java의 HashMap(or Object)
+
+### 자바와 같은 자료구조를 가지는데 왜 Redis를 따로 사용하는가?
+
+: 자바 객체로 데이터를 저장하면 서버가 여러 대인 경우 서버마다 다른 데이터를 가지고 있을 수 있기 때문에 일관성 문제가 발생할 수 있다. 또한 멀티 스레드 환경에서 Race Condition 문제가 발생할 수 있다.
+
+* Race Condition: 여러 개의 스레드가 경합하는 것 → 컨텍스트 스위칭으로 인해 원하지 않는 결과를 얻을 수 있음
+
+Redis는 Race Condition 문제를 해결하기 위해 기본적으로 싱글 스레드이며, Redis 자료구조는 Atomic Critical Section에 대한 동기화를 제공한다. 또한 서로 다른 트랜잭션의 읽기/쓰기 작업을 동기화한다.
+
+* Critical Section: 동시에 여러 프로세스가 접근하면 안되는 영역
+
+따라서, 여러 서버에서 같은 데이터를 공유할 때 주로 사용하고, 단일 서버라면 Redis의 Atomic 자료구조나 캐시 기능을 이용한다.
+
+### Redis는 왜 싱글 스레드인가?
+
+* Event Driven(비동기)
+* IO - bound Process: CPU 연산보다는 메모리 IO 관련 연산의 비중이 큼
+* 컨텍스트 스위칭의 효율이 적음
+* 개발하고 사용하는데 쉬움
+
+### Redis 사용 시 주의해야 할 점
+
+* 싱글 스레드이므로 시간 복잡도를 고려해서 명령어를 사용해야 함
+
+  → 전체 데이터를 다루는 명령어는 사용하지 않는게 좋음 ex) keys, flush, getAll 등
+
+* 인메모리 특성상 메모리 파편화, 가상 메모리, Replication - Fork 등의 이해가 필요
+
+
+
 ## Jenkins를 왜 사용하는가?
 
 Travis CI와의 비교
