--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -17,7 +17,7 @@ https://ssoco.tistory.com/66
 
 ### 왜 스프링을 통해 기업용 애플리케이션을 보다 쉽게 만들 수 있는 것인가?
 
-스프링의 DI, IoC를 통해 재사용 및 유지보수가 용이한 코드를 작성할 수 있고, 확장성을 가진 코드를 설계할 수 있다. 또한 스프링이 제공해주는 기능들을 통해 개발자는 비즈니스 로직에만 집중할 수 있기 때문에 생산성을 증가시킬 수 있다.
+스프링의 DI, IoC를 통해 재사용 및 유지보수가 용이한 코드를 작성할 수 있고, 확장성을 가진 코드를 설계할 수 있다. 또한 스프링이 제공해주는 기능들을 통해 개발자는 비즈니스 로직에만 집중할 수 있기 때문에 생산성을 증가시킬 수 있다. PSA(일관성 있는 추상화) 기법을 통해 다양한 기술을 표준화된 방식으로 사용할 수 있게 지원해준다.
 
 * 목표를 위한 해결책
 
