--- a/Interview/11. 인성 면접.md
+++ b/Interview/11. 인성 면접.md
@@ -12,6 +12,8 @@
 
 첫 번째로 이전 회사는 개발에 집중할 수 없는 환경이었습니다. 서비스를 개발한 이후 개발 업무보다는 다른 업무들을 주로 맡아서 하게 되었습니다. 물론 다른 업무도 할 수 있다고는 생각하지만 개발 업무보다 우선적으로 맡아서 해야 하는 상황이 계속 이어졌기 때문에 개발자로서의 성장이 힘들다고 판단하고 이직을 결심했습니다.
 
+하지만 그 당시에는 제 실력이 부족하다고 생각했습니다. 채용 공고를 살펴보면서 내가 이 기술에 대해서 제대로 설명할 수 있는가라는 질문을 스스로 던져봤을 때 그렇지 못하다는 판단이 들었습니다. 이대로 이직을 진행한다면 더 좋은 회사보다는 비슷한 회사를 갈 수 밖에 없다고 생각했고, 퇴사를 하고 공부하는데에 시간을 투자해서 더 좋은 회사를 가기로 선택했습니다.
+
 두 번째는 저의 공부 방법과 개발 습관을 바꾸고 싶었습니다. 이전에는 어떤 기능을 구현해야 한다는 업무를 맡았을 때 관련 기술이나 지식을 공부하지 않고 기능 개발에만 급급했습니다. 이런 마인드로 개발을 하다보니 어느샌가 성장을 하지 못하고 정체하고 있다는 것을 깨달았기 때문입니다. 하지만 그렇게 하기 위해선 업무 외에 온전히 공부에 집중할 수 있는 시간이 많이 필요했고, 고민 끝에 퇴사를 하게 되었습니다.
 
 → 왜 시간이 필요했는지가 명확하지 않음
@@ -78,9 +80,12 @@
 도움을 받을 수 있는 훌륭한 동료들도 많고, 나도 그러한 개발자로 성장하고 싶다.
 주니어 때 성장을 많이 할 수 있다고 들었다. 그렇게 짧은 시간에 열정적으로 개발하면? 폭발적으로 성장할 수 있다.
 내가 일한 만큼 노력한 만큼 보상도 맞춰서 해준다고 들었다.
-5. 돈을 조금 주는데 왜 지원함?(꼭 돈에 초점을 맞출 필요가 없음)
-좋은 동료들
-많은 사람들이 이용할 수 있는 어플이라 개발해보고 있었다.
+
+좋은 개발 문화를 가졌기 때문에 강요에 의한 것이 아닌 어떻게 하면 더 좋은 서비스를 만들 수 있을까에 대한 고민에서 나온 자발적 문화라고 생각합니다. 모든 사람들이 그러한 마인드를 가지고 일한다면 그렇게 만들 수 밖에 없는 매력이 분명 회사 안에 녹아들어 있다고 생각합니다. 도대체 그게 어떤 매력인지 굉장히 궁금했고, 만약 입사를 하게 된다면 저 또한 그 매력에 흠뻑 빠져 시간과 상관없이 적극적으로 업무를 할 것 같습니다.
+
+4. 돈을 조금 주는데 왜 지원함?(꼭 돈에 초점을 맞출 필요가 없음)
+  좋은 동료들
+  많은 사람들이 이용할 수 있는 어플이라 개발해보고 있었다.
 
 
 
